syntax = "proto3";
/**
 * RPC calls provided by the Expert API subsystem.
 */

package protos.expert;

import "google/protobuf/any.proto";

service ExpertAPI {
  /**
   * Send a list of expert actions and facts (commands) to the AI Module. The list will be processed during the next AI tick for the specified player. If that does not occur in 5 seconds, an error code will be returned.
   */
  rpc ExecuteCommandList(CommandList) returns (CommandResultList) {}
}

/**
 * `ExecuteCommandList` call parameters.
 */
message CommandList {
  int32 playerNumber = 1; // player number from 1-8 on which to execute the commands, must be an AI player
  repeated google.protobuf.Any commands = 2; // list of commands to execute on behalf of that player
}
/**
 * `ExecuteCommandList` call reply.
 */
message CommandResultList {
  int32 playerNumber = 1; // player number from 1-8 on which the commands were executed on
  repeated google.protobuf.Any results = 2; // list of results for each command in the same order as the originally sent in the command list
}

/**
 * An optional structure that can be put in the CommandList message commands list. The server
 * will evaluate the fact and compare it to the specified value using the operator given. The
 * command to be conditionally executed can be anything, including a fact.
 */
message ConditionalCommand {
  google.protobuf.Any fact = 1;
  string compareOp = 2;
  oneof value {
    int32 inConstValue = 3;
    int32 inGoalValue = 4;
    int32 inSnValue = 5;
  }
  google.protobuf.Any command = 6;
}
message ConditionalCommandResult {
  bool fired = 1;
  google.protobuf.Any result = 2;
}
